cargo-features = ["per-package-target"]
[package]
name = "subcalc"
version = "0.0.1"
edition = "2021"
default-target = "x86_64-unknown-linux-musl"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 12
debug = false
debug-assertions = false

[dependencies]
ipnetwork = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
